# Lad-in-the-Window

./: CMakeLists.txt  LITW.slnx  README.md
Demo/: CustomWindow.cpp  MainDemo.cpp  StartMenu.cpp  helloworld.cpp  main.cpp
LITW/: Button.hpp  LITW.vcxproj  LITW.vcxproj.filters  Label.hpp  StartMenu.hpp  TextInput.hpp  Widget.hpp  Window.cpp  Window.hpp  init.hpp  main.cpp  mian.cpp  userinput.cpp  userinput.hpp
cmake/: LITWConfig.cmake
include/: LITW.hpp  Widget.hpp  Window.hpp  init.hpp  userinput.hpp
include/widgets/: Bar.hpp  Button.hpp  Checkbox.hpp  EyesWidget.hpp  Label.hpp  LargeTextbox.hpp  ScrollContainer.hpp  Scrollable.hpp  Separator.hpp  ShellWidget.hpp  TextInput.hpp  Toggle.hpp  table.hpp
include/widgets/containers/: HorizCon.hpp  HorizontalContainer.hpp  ScrollContainer.hpp  VertCon.hpp  VerticalContainer.hpp
include/widgets/text/: Label.hpp  LargeTextInput.hpp  LargeTextbox.hpp  Scrollable.hpp  ScrollableTextBox.hpp  TextInput.hpp
include/windows/: AlertWindow.hpp  StartMenu.hpp
src/: ShellWidget.cpp  Window.cpp  main.cpp  userinput.cpp
src/widgets/: ShellWidget.cpp
windowsRC/: LITW.rc
